# SoulX-Singer

./: .dockerignore  .gitignore  .gitmodules  QUICK_START.md  README.md  UCLOUD_DEPLOYMENT.md  deploy.sh  docker-compose.yml  test_api.sh  webui.py  webui_svc.py
cli/: inference.py  (+1 more)
comfyui/: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt
comfyui/.github/workflows/: publish_action.yml
comfyui/SoulX-Singer/: .gitignore  requirements.txt
comfyui/SoulX-Singer/cli/: inference.py
comfyui/SoulX-Singer/example/: infer.sh  preprocess.sh
comfyui/SoulX-Singer/example/audio/: en_prompt.json  en_target.json  music.json  yue_target.json  zh_prompt.json  zh_target.json
comfyui/SoulX-Singer/preprocess/: README.md  pipeline.py  requirements.txt  utils.py
comfyui/SoulX-Singer/preprocess/tools/: __init__.py  f0_extraction.py  g2p.py  lyric_transcription.py  midi_parser.py  vocal_detection.py
comfyui/SoulX-Singer/preprocess/tools/midi_editor/: README.md  README_CN.md  index.html  package-lock.json  package.json  tailwind.config.js
comfyui/SoulX-Singer/preprocess/tools/note_transcription/: model.py
comfyui/SoulX-Singer/preprocess/tools/vocal_separation/: model.py
comfyui/SoulX-Singer/soulxsinger/config/: soulxsinger.yaml
comfyui/SoulX-Singer/soulxsinger/models/: soulxsinger.py
comfyui/SoulX-Singer/soulxsinger/utils/: audio_utils.py  data_processor.py  file_utils.py  pitch_utils.py
comfyui/example_workflow/: soulx-singer_example_workflow.json
comfyui/nodes/: __init__.py  advanced_synthesizer.py  model_loader.py  simple_synthesizer.py
(+72 files in other folders)
