[project]
name = "Comfyui-SoulX-Singer"
description = "ComfyUI custom nodes for SoulX-Singer - Zero-Shot Singing Voice Synthesis"
version = "0.7.2"
license = {file = "LICENSE"}
authors = [
    { name = "SoulX-Singer Team" }
]

dependencies = ["torch", "soundfile", "librosa", "numpy", "omegaconf", "huggingface_hub", "safetensors", "accelerate", "beartype", "einops", "funasr", "g2p_en", "g2pM", "gradio", "loralib", "matplotlib", "mido", "ml_collections", "nemo_toolkit", "nltk", "numba", "packaging", "praat-parselmouth", "pretty_midi", "pyloudnorm", "pyworld", "rotary_embedding_torch", "scikit_learn", "scipy", "scikit_image", "ToJyutping", "torchcodec", "tqdm", "transformers", "webrtcvad"]


[project.urls]
Repository = "https://github.com/Saganaki22/ComfyUI-SoulX-Singer"


[tool.comfy]
PublisherId = "saganaki22"
DisplayName = "SoulX-Singer"
Icon = "https://avatars.githubusercontent.com/u/84208527"

